User story 1 user sign up: completed

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,11 +1,23 @@
-<div class="container">
+<br  />
+<div class="jumbotron">
   <h1>Blocipedia</h1>
-  <div class="media-heading">
-    <h3>Welcome to Blocipedia, a place for community-sourced content.</h3>
+  <h2>Social, Markdown Wikis</h3>
+  <div>
+    <%= link_to "Sign Up", root_path, class: 'btn btn-primary' %>
   </div>
-  <div class="media">
-    <p>
-      Sign-up and start working today!
-    </p>
+</div>
+
+<div class="row">
+  <div class="col-md-1">
+  </div>
+  <div class="col-md-5 accounts">
+    <h2>Free Plan Includes:</h2>
+    <h3>Unlimited Public Wikis!</h3>
+  </div>
+  <div class="col-md-5 accounts">
+    <h2>Free Plan Includes:</h2>
+    <h3>Unlimited Private Wikis!</h3>
+  </div>
+  <div class="col-md-1">
   </div>
 </div>
