--- a/app/views/welcome/about.html.erb
+++ b/app/views/welcome/about.html.erb
@@ -1,8 +1,5 @@
 <div class="container">
-  <h1>Blocipedia: About</h1>
-  <div class="media-heading">
-    <h3 class="slogan">Blocipedia - a place for community-sourced content.</h3>
-  </div>
+  <h1 class="slogan">Blocipedia: a place for community-sourced content.</h1>
   <div class="media">
     <p>
       <strong>Our goal:</strong>  is creating a great place for collaborators to come together and work on whatever excites them!<br />
