--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,9 +2,6 @@
 <div class="jumbotron">
   <h1>Blocipedia</h1>
   <h2>Social, Markdown Wikis</h3>
-  <div>
-    <%= link_to "Sign Up", root_path, class: 'btn btn-primary' %>
-  </div>
 </div>
 
 <div class="row">
@@ -15,7 +12,7 @@
     <h3>Unlimited Public Wikis!</h3>
   </div>
   <div class="col-md-5 accounts">
-    <h2>Free Plan Includes:</h2>
+    <h2>Premium Plan Includes:</h2>
     <h3>Unlimited Private Wikis!</h3>
   </div>
   <div class="col-md-1">
