--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,11 @@
 <br  />
 <div class="jumbotron">
   <h1>Blocipedia</h1>
-  <h2>Social, Markdown Wikis</h3>
+  <h2>Social, Markdown Wikis</h2>
+  <div>
+    <%= link_to "Sign In", new_user_session_path %> or
+    <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-primary' %> today!
+  </div>
 </div>
 
 <div class="row">
