--- a/app/views/wikis/edit.html.erb
+++ b/app/views/wikis/edit.html.erb
@@ -1,2 +1,23 @@
-<h1>Wikis#edit</h1>
-<p>Find me in app/views/wikis/edit.html.erb</p>
+<h2>Edit Public Wiki</h2>
+
+<div class="row">
+  <div class="col-md-4">
+    <p>Guidelines for wikis</p>
+    <ul>
+      <li>Remember this is a public wiki.</li>
+      <li>Don't use the letter "A".</li>
+      <li>The incessant use of hashtags will get you banned.</li>
+    </ul>
+  </div>
+  <div class="col-md-8">
+    <%= form_for @wiki do |f| %>
+       <%= f.label :title %>
+       <%= f.text_field :title %>
+
+       <%= f.label :body %>
+       <%= f.text_area :body %>
+
+       <%= f.submit "Save" %>
+     <% end %>
+  </div>
+</div>
