--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,24 +1,16 @@
 // Place all the styles related to the Welcome controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.jumbotron {
-  margin: 0 10% 0 10%;
-  text-align: center;
-  border-radius: 10px;
-}
-
-h1 {
-  margin-top: 5px;
-}
-
-.row {
+div.jumbotron {
   text-align: center;
 }
 
-.media {
+.accounts {
   text-align: center;
 }
 
-.slogan {
-  text-align: center;
+.accounts ul {
+  list-style-type: none;
+  padding: 0;
+  font-size: 24px;
 }
