--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -10,14 +10,6 @@
     </ul>
   </div>
   <div class="col-md-8">
-    <%= form_for @wiki do |f| %>
-       <%= f.label :title %>
-       <%= f.text_field :title %>
-
-       <%= f.label :body %>
-       <%= f.text_area :body %>
-
-       <%= f.submit "Save" %>
-     <% end %>
+    <%= render partial: 'form', locals: {wiki: @wiki} %>
   </div>
 </div>
