--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,7 +29,7 @@
       </div>
 
       <div class="actions">
-        <%= f.submit "Sign up", class: 'btn btn-success' %>
+        <%= f.submit "Sign up", class: 'btn btn-primary' %>
       </div>
     <% end %>
 
