--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -9,9 +9,15 @@
     <% @wikis.each do |wiki| %>
       <div class="media">
         <div class="media-body">
-          <h4 class="media-heading">
-            <%= link_to wiki.title, wiki %>
-          </h4>
+          <% if current_user.premium? || current_user.admin? %>
+            <h4 class="media-heading">
+              <%= link_to wiki.title, wiki %>
+            </h4>
+          <% elsif wiki.private != true %>
+            <h4 class="media-heading">
+              <%= link_to wiki.title, wiki %>
+            </h4>
+          <% end %>
         </div>
       </div>
     <% end %>
