--- a/app/views/wikis/new.html.erb
+++ b/app/views/wikis/new.html.erb
@@ -1,13 +1,9 @@
-<h2>New Public Wiki</h2>
+<h2>New Wiki</h2>
 
 <div class="row">
   <div class="col-md-4">
-    <p>Guidelines for wikis</p>
-    <ul>
-      <li>Remember this is a public wiki.</li>
-      <li>Don't use the letter "A".</li>
-      <li>The incessant use of hashtags will get you banned.</li>
-    </ul>
+    <h3>Blocipedia supports Markdown syntax.</h3>
+    <h5><a href="https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet">Go here for more info on Markdown.</a></h5>
   </div>
   <div class="col-md-8">
     <%= render partial: 'form', locals: {wiki: @wiki} %>
