--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -1,7 +1,7 @@
-<h2>Public Wikis</h2>
+<h2>Wikis</h2>
 
 <div class="col-md-12">
-  <%= link_to "New Public Wiki", new_wiki_path, class: 'btn btn-success' %>
+  <%= link_to "New Wiki", new_wiki_path, class: 'btn btn-success' %>
 </div>
 
 <div class="row">
